# cutie-system-monitor

./: CMakeLists.txt  README.md  cutie-sysmonitor.desktop
debian/: control  rules
src/: main.cpp  systemmonitor.cpp  systemmonitor.h
src/qml/: LineGraph.qml  MemoryPage.qml  NetworkPage.qml  PerformancePage.qml  main.qml  qml.qrc
